--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2274,29 +2274,29 @@
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --font-size-md: 18px;
-  --d-ar-t-o-n: 22px;
+  --line-height-lg: 22px;
   --font-size-lg: 22px;
-  --fme-bf-w: 26px;
+  --line-height-xxl: 26px;
   --font-size-xl: 26px;
-  --b-x-z-q-l-e: 30px;
+  --line-height-3xl: 30px;
   --font-size-xxl: 32px;
-  --hu-t-o-g-n: 36px;
+  --line-height-4xl: 36px;
   --font-size-xxs: 10px;
-  --dpgw-ac: 12px;
+  --line-height-xxs: 12px;
   --font-size-xs: 12px;
-  --f-l-h-bac: 16px;
+  --line-height-xs: 16px;
   --font-size-sm: 14px;
-  --j-p-z-kco: 18px;
+  --line-height-sm: 18px;
   --font-size-sm: 14px;
-  --gvarj-f: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  ---s-l-myu: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  --cb-pewj: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --f-xgviq: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --j-n-c-d-l-h: 28px;
+  --line-height-2xl: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
   --h-oqhch: 800;
@@ -2377,29 +2377,29 @@
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --font-size-md: 18px;
-  --d-ar-t-o-n: 22px;
+  --line-height-lg: 22px;
   --font-size-lg: 22px;
-  --fme-bf-w: 26px;
+  --line-height-xxl: 26px;
   --font-size-xl: 26px;
-  --b-x-z-q-l-e: 30px;
+  --line-height-3xl: 30px;
   --font-size-xxl: 32px;
-  --hu-t-o-g-n: 36px;
+  --line-height-4xl: 36px;
   --font-size-xxs: 10px;
-  --dpgw-ac: 12px;
+  --line-height-xxs: 12px;
   --font-size-xs: 12px;
-  --f-l-h-bac: 16px;
+  --line-height-xs: 16px;
   --font-size-sm: 14px;
-  --j-p-z-kco: 18px;
+  --line-height-sm: 18px;
   --font-size-sm: 14px;
-  --gvarj-f: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  ---s-l-myu: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  --cb-pewj: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --f-xgviq: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --j-n-c-d-l-h: 28px;
+  --line-height-2xl: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
   --h-oqhch: 800;
@@ -2485,29 +2485,29 @@
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --font-size-md: 18px;
-  --d-ar-t-o-n: 22px;
+  --line-height-lg: 22px;
   --font-size-lg: 22px;
-  --fme-bf-w: 26px;
+  --line-height-xxl: 26px;
   --font-size-xl: 26px;
-  --b-x-z-q-l-e: 30px;
+  --line-height-3xl: 30px;
   --font-size-xxl: 32px;
-  --hu-t-o-g-n: 36px;
+  --line-height-4xl: 36px;
   --font-size-xxs: 10px;
-  --dpgw-ac: 12px;
+  --line-height-xxs: 12px;
   --font-size-xs: 12px;
-  --f-l-h-bac: 16px;
+  --line-height-xs: 16px;
   --font-size-sm: 14px;
-  --j-p-z-kco: 18px;
+  --line-height-sm: 18px;
   --font-size-sm: 14px;
-  --gvarj-f: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  ---s-l-myu: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  --cb-pewj: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --f-xgviq: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --j-n-c-d-l-h: 28px;
+  --line-height-2xl: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
   --h-oqhch: 800;
@@ -2606,29 +2606,29 @@
     --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
     --font-size-md: 18px;
-    --d-ar-t-o-n: 22px;
+    --line-height-lg: 22px;
     --font-size-lg: 22px;
-    --fme-bf-w: 26px;
+    --line-height-xxl: 26px;
     --font-size-xl: 26px;
-    --b-x-z-q-l-e: 30px;
+    --line-height-3xl: 30px;
     --font-size-xxl: 32px;
-    --hu-t-o-g-n: 36px;
+    --line-height-4xl: 36px;
     --font-size-xxs: 10px;
-    --dpgw-ac: 12px;
+    --line-height-xxs: 12px;
     --font-size-xs: 12px;
-    --f-l-h-bac: 16px;
+    --line-height-xs: 16px;
     --font-size-sm: 14px;
-    --j-p-z-kco: 18px;
+    --line-height-sm: 18px;
     --font-size-sm: 14px;
-    --gvarj-f: 20px;
+    --line-height-md: 20px;
     --font-size: 16px;
-    ---s-l-myu: 20px;
+    --line-height-md: 20px;
     --font-size: 16px;
-    --cb-pewj: 24px;
+    --line-height-xl: 24px;
     --font-size-md: 18px;
-    --f-xgviq: 24px;
+    --line-height-xl: 24px;
     --font-size-md: 18px;
-    --j-n-c-d-l-h: 28px;
+    --line-height-2xl: 28px;
     --e-y-j-d-v-j: 400;
     --jx-zk-pv: 600;
     --h-oqhch: 800;
@@ -7501,7 +7501,7 @@ select[disabled] {
 /* Card Alt 4 */
 .card-alt-4__ratings[class][class] {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   align-items: center;
   display: flex;
   width: 100%;
@@ -7597,7 +7597,7 @@ select[disabled] {
   display: flex;
   align-items: center;
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 .card-alt-4__ratings-container[class][class]
   .card-alt-4__ratings-icon-wrapper[class][class] {
@@ -7864,7 +7864,7 @@ select[disabled] {
 }
 .card-alt-4__ratings[class][class] {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -7891,7 +7891,7 @@ select[disabled] {
   margin-right: var(--spacer-2);
 }
 .card-alt-4__location[class][class] {
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -7905,7 +7905,7 @@ select[disabled] {
   }
 }
 .card-alt-4__location--small[class][class] {
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -7962,8 +7962,8 @@ select[disabled] {
 }
 .card-alt-4__text[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
+  line-height: var(--line-height-xs);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -7982,8 +7982,8 @@ select[disabled] {
 @media (min-width: 744px) {
   .card-alt-4__text[class][class] {
     font-size: var(--font-size-sm);
-    line-height: var(--gvarj-f);
-    line-height: var(--gvarj-f);
+    line-height: var(--line-height-md);
+    line-height: var(--line-height-md);
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -7998,7 +7998,7 @@ select[disabled] {
 }
 .card-alt-4__text-sm[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
 }
 .card-alt-4__media-container[class][class] {
   overflow: hidden;
@@ -8056,8 +8056,8 @@ select[disabled] {
 }
 .card-alt-4__title[class][class] {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
+  line-height: var(--line-height-md);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -8071,8 +8071,8 @@ select[disabled] {
 }
 .card-alt-4__title-sm[class][class] {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
+  line-height: var(--line-height-sm);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -8135,7 +8135,7 @@ select[disabled] {
   -ms-flex-align: center;
   align-items: center;
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 /* /Card Alt 4 */
 
@@ -8274,7 +8274,7 @@ select[disabled] {
 .card-basic__title[class][class] {
   color: var(--f-k-smk-x);
   font-size: var(--font-size-md);
-  line-height: var(--d-ar-t-o-n);
+  line-height: var(--line-height-lg);
   font-weight: var(--jx-zk-pv);
   display: block;
 }
@@ -8436,7 +8436,7 @@ select[disabled] {
 }
 .card-horizontal-outlined__btn-text-size[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
 }
 .card-horizontal-outlined[class][class] {
   display: flex;
@@ -8472,7 +8472,7 @@ select[disabled] {
 }
 .card-horizontal-outlined__price-info[class][class] {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 /* /Card Horizontal Outlined */
 
@@ -8930,11 +8930,11 @@ select[disabled] {
 }
 .card-portrait__overline-compact {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
 }
 .card-portrait__overline-text-compact {
-  line-height: var(--f-l-h-bac);
-  max-height: calc(1 * var(--f-l-h-bac));
+  line-height: var(--line-height-xs);
+  max-height: calc(1 * var(--line-height-xs));
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -8948,13 +8948,13 @@ select[disabled] {
 }
 .card-portrait__pricing-text-mobile {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 .card-portrait__secondary-line {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
-  line-height: var(--f-l-h-bac);
-  max-height: calc(3 * var(--f-l-h-bac));
+  line-height: var(--line-height-xs);
+  line-height: var(--line-height-xs);
+  max-height: calc(3 * var(--line-height-xs));
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -8969,9 +8969,9 @@ select[disabled] {
 @media (min-width: 744px) {
   .card-portrait__secondary-line {
     font-size: var(--font-size-sm);
-    line-height: var(--gvarj-f);
-    line-height: var(--gvarj-f);
-    max-height: calc(1 * var(--gvarj-f));
+    line-height: var(--line-height-md);
+    line-height: var(--line-height-md);
+    max-height: calc(1 * var(--line-height-md));
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -8991,7 +8991,7 @@ select[disabled] {
 }
 .card-portrait__overline {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -9014,8 +9014,8 @@ select[disabled] {
   margin-right: var(--spacer-2);
 }
 .card-portrait__overline-text {
-  line-height: var(--j-p-z-kco);
-  max-height: calc(1 * var(--j-p-z-kco));
+  line-height: var(--line-height-sm);
+  max-height: calc(1 * var(--line-height-sm));
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -9045,7 +9045,7 @@ select[disabled] {
 }
 .card-portrait__pricing-text {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
 }
 .card-portrait__pricing-price,
 .card-portrait__pricing-text-strong {
@@ -10123,7 +10123,7 @@ select[disabled] {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -10681,7 +10681,7 @@ select[disabled] {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -10815,7 +10815,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -11032,7 +11032,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -11149,7 +11149,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -11273,7 +11273,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -11305,7 +11305,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -11329,7 +11329,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -11387,7 +11387,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -11411,7 +11411,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -11520,7 +11520,7 @@ fieldset[disabled] .btn {
 .btn-save-bordered[class][class] {
   font-family: var(--font-family);
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
   outline: 0;
@@ -12078,7 +12078,7 @@ fieldset[disabled] .btn {
 }
 .btn-filter__text[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   font-weight: var(--jx-zk-pv);
   display: none;
 }
@@ -12103,7 +12103,7 @@ fieldset[disabled] .btn {
 }
 .btn-filter-count__text[class][class] {
   font-size: var(--font-size-xxs);
-  line-height: var(--dpgw-ac);
+  line-height: var(--line-height-xxs);
   color: var(--f-mkcy-f);
   font-weight: var(--h-oqhch);
 }
@@ -12431,7 +12431,7 @@ fieldset[disabled] .btn {
 }
 .explore-filter-menu__price-title[class][class] {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   font-weight: var(--e-y-j-d-v-j);
   color: var(--fo-jk-r-s);
 }
@@ -13612,7 +13612,7 @@ fieldset[disabled] .btn {
   padding: 0;
   margin: 0;
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   color: var(--fo-jk-r-s);
   font-weight: var(--jx-zk-pv);
   width: max-content;
@@ -14134,7 +14134,7 @@ fieldset[disabled] .btn {
   color: var(--f-k-smk-x);
   font-weight: var(--h-oqhch);
   font-size: var(--font-size-xxl);
-  line-height: var(--hu-t-o-g-n);
+  line-height: var(--line-height-4xl);
 }
 .dir.jumbotron-header__text[class][class] {
   margin-bottom: var(--spacer-3);
@@ -14142,12 +14142,12 @@ fieldset[disabled] .btn {
 @media (max-width: 743px) {
   .jumbotron-header__text[class][class] {
     font-size: var(--font-size-lg);
-    line-height: var(--fme-bf-w);
+    line-height: var(--line-height-xxl);
   }
 }
 .jumbotron-header__description[class][class] {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   font-weight: var(--e-y-j-d-v-j);
   color: var(--fo-jk-r-s);
 }
@@ -14688,7 +14688,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -14823,7 +14823,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -14934,7 +14934,7 @@ fieldset[disabled] .btn {
   color: var(--f-k-smk-x);
   font-weight: var(--h-oqhch);
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 .dir.page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-header-text[class][class] {
@@ -14944,7 +14944,7 @@ fieldset[disabled] .btn {
   .page-shell-mobile__alert-header-desc[class][class] {
   color: var(--f-k-smk-x);
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 .page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-header-desc-color[class][class] {
@@ -17346,7 +17346,7 @@ fieldset[disabled] .btn {
 }
 .t2353uq[class][class] {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   color: var(--f-k-smk-x);
   font-weight: var(--jx-zk-pv)
 }
@@ -17511,7 +17511,7 @@ fieldset[disabled] .btn {
   text-decoration: none;
   user-select: auto;
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   color: var(--f-k-smk-x);
   display: flex;
   white-space: nowrap;
@@ -17578,7 +17578,7 @@ fieldset[disabled] .btn {
 }
 .a90wtny[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   color: var(--fo-jk-r-s);
   display: inline-block;
   flex: 0 0 auto;
@@ -17601,7 +17601,7 @@ fieldset[disabled] .btn {
   text-decoration: none;
   user-select: auto;
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   color: var(--f-k-smk-x);
   display: flex;
   white-space: nowrap;
