--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -544,7 +544,7 @@
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -1102,7 +1102,7 @@
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -1236,7 +1236,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -1453,7 +1453,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -1570,7 +1570,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -1694,7 +1694,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -1726,7 +1726,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -1750,7 +1750,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
-  line-height: var(---s-l-myu) !important;
+  line-height: var(--line-height-md) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -1808,7 +1808,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -1832,7 +1832,7 @@ fieldset[disabled] .btn {
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -1941,7 +1941,7 @@ fieldset[disabled] .btn {
 .btn-save-bordered[class][class] {
   font-family: var(--font-family);
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   font-weight: var(--jx-zk-pv);
   border-radius: var(--border-radius);
   outline: 0;
@@ -2499,7 +2499,7 @@ fieldset[disabled] .btn {
 }
 .btn-filter__text[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   font-weight: var(--jx-zk-pv);
   display: none;
 }
@@ -2524,7 +2524,7 @@ fieldset[disabled] .btn {
 }
 .btn-filter-count__text[class][class] {
   font-size: var(--font-size-xxs);
-  line-height: var(--dpgw-ac);
+  line-height: var(--line-height-xxs);
   color: var(--f-mkcy-f);
   font-weight: var(--h-oqhch);
 }
