--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -55,7 +55,7 @@
 }
 .card-horizontal-outlined__btn-text-size[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
 }
 .card-horizontal-outlined[class][class] {
   display: flex;
@@ -91,6 +91,6 @@
 }
 .card-horizontal-outlined__price-info[class][class] {
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 /* /Card Horizontal Outlined */
