--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -9,7 +9,7 @@
 }
 .explore-filter-menu__price-title[class][class] {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   font-weight: var(--e-y-j-d-v-j);
   color: var(--fo-jk-r-s);
 }
