--- a/src/css/components/header-filter.css
+++ b/src/css/components/header-filter.css
@@ -61,7 +61,7 @@
   padding: 0;
   margin: 0;
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   color: var(--fo-jk-r-s);
   font-weight: var(--jx-zk-pv);
   width: max-content;
