--- a/src/css/components/page-shell.css
+++ b/src/css/components/page-shell.css
@@ -76,7 +76,7 @@
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
@@ -211,7 +211,7 @@
   touch-action: manipulation !important;
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
-  line-height: var(--j-p-z-kco) !important;
+  line-height: var(--line-height-sm) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
@@ -322,7 +322,7 @@
   color: var(--f-k-smk-x);
   font-weight: var(--h-oqhch);
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 .dir.page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-header-text[class][class] {
@@ -332,7 +332,7 @@
   .page-shell-mobile__alert-header-desc[class][class] {
   color: var(--f-k-smk-x);
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
 }
 .page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-header-desc-color[class][class] {
