--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1644,7 +1644,7 @@
 }
 .t2353uq[class][class] {
   font-size: var(--font-size);
-  line-height: var(---s-l-myu);
+  line-height: var(--line-height-md);
   color: var(--f-k-smk-x);
   font-weight: var(--jx-zk-pv)
 }
@@ -1809,7 +1809,7 @@
   text-decoration: none;
   user-select: auto;
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   color: var(--f-k-smk-x);
   display: flex;
   white-space: nowrap;
@@ -1876,7 +1876,7 @@
 }
 .a90wtny[class][class] {
   font-size: var(--font-size-xs);
-  line-height: var(--f-l-h-bac);
+  line-height: var(--line-height-xs);
   color: var(--fo-jk-r-s);
   display: inline-block;
   flex: 0 0 auto;
@@ -1899,7 +1899,7 @@
   text-decoration: none;
   user-select: auto;
   font-size: var(--font-size-sm);
-  line-height: var(--j-p-z-kco);
+  line-height: var(--line-height-sm);
   color: var(--f-k-smk-x);
   display: flex;
   white-space: nowrap;
