--- a/src/css/root.css
+++ b/src/css/root.css
@@ -73,29 +73,29 @@
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --font-size-md: 18px;
-  --d-ar-t-o-n: 22px;
+  --line-height-lg: 22px;
   --font-size-lg: 22px;
-  --fme-bf-w: 26px;
+  --line-height-xxl: 26px;
   --font-size-xl: 26px;
-  --b-x-z-q-l-e: 30px;
+  --line-height-3xl: 30px;
   --font-size-xxl: 32px;
-  --hu-t-o-g-n: 36px;
+  --line-height-4xl: 36px;
   --font-size-xxs: 10px;
-  --dpgw-ac: 12px;
+  --line-height-xxs: 12px;
   --font-size-xs: 12px;
-  --f-l-h-bac: 16px;
+  --line-height-xs: 16px;
   --font-size-sm: 14px;
-  --j-p-z-kco: 18px;
+  --line-height-sm: 18px;
   --font-size-sm: 14px;
-  --gvarj-f: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  ---s-l-myu: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  --cb-pewj: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --f-xgviq: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --j-n-c-d-l-h: 28px;
+  --line-height-2xl: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
   --h-oqhch: 800;
@@ -176,29 +176,29 @@
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --font-size-md: 18px;
-  --d-ar-t-o-n: 22px;
+  --line-height-lg: 22px;
   --font-size-lg: 22px;
-  --fme-bf-w: 26px;
+  --line-height-xxl: 26px;
   --font-size-xl: 26px;
-  --b-x-z-q-l-e: 30px;
+  --line-height-3xl: 30px;
   --font-size-xxl: 32px;
-  --hu-t-o-g-n: 36px;
+  --line-height-4xl: 36px;
   --font-size-xxs: 10px;
-  --dpgw-ac: 12px;
+  --line-height-xxs: 12px;
   --font-size-xs: 12px;
-  --f-l-h-bac: 16px;
+  --line-height-xs: 16px;
   --font-size-sm: 14px;
-  --j-p-z-kco: 18px;
+  --line-height-sm: 18px;
   --font-size-sm: 14px;
-  --gvarj-f: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  ---s-l-myu: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  --cb-pewj: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --f-xgviq: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --j-n-c-d-l-h: 28px;
+  --line-height-2xl: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
   --h-oqhch: 800;
@@ -284,29 +284,29 @@
   --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
     'Helvetica Neue', sans-serif;
   --font-size-md: 18px;
-  --d-ar-t-o-n: 22px;
+  --line-height-lg: 22px;
   --font-size-lg: 22px;
-  --fme-bf-w: 26px;
+  --line-height-xxl: 26px;
   --font-size-xl: 26px;
-  --b-x-z-q-l-e: 30px;
+  --line-height-3xl: 30px;
   --font-size-xxl: 32px;
-  --hu-t-o-g-n: 36px;
+  --line-height-4xl: 36px;
   --font-size-xxs: 10px;
-  --dpgw-ac: 12px;
+  --line-height-xxs: 12px;
   --font-size-xs: 12px;
-  --f-l-h-bac: 16px;
+  --line-height-xs: 16px;
   --font-size-sm: 14px;
-  --j-p-z-kco: 18px;
+  --line-height-sm: 18px;
   --font-size-sm: 14px;
-  --gvarj-f: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  ---s-l-myu: 20px;
+  --line-height-md: 20px;
   --font-size: 16px;
-  --cb-pewj: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --f-xgviq: 24px;
+  --line-height-xl: 24px;
   --font-size-md: 18px;
-  --j-n-c-d-l-h: 28px;
+  --line-height-2xl: 28px;
   --e-y-j-d-v-j: 400;
   --jx-zk-pv: 600;
   --h-oqhch: 800;
@@ -405,29 +405,29 @@
     --font-family: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
       'Helvetica Neue', sans-serif;
     --font-size-md: 18px;
-    --d-ar-t-o-n: 22px;
+    --line-height-lg: 22px;
     --font-size-lg: 22px;
-    --fme-bf-w: 26px;
+    --line-height-xxl: 26px;
     --font-size-xl: 26px;
-    --b-x-z-q-l-e: 30px;
+    --line-height-3xl: 30px;
     --font-size-xxl: 32px;
-    --hu-t-o-g-n: 36px;
+    --line-height-4xl: 36px;
     --font-size-xxs: 10px;
-    --dpgw-ac: 12px;
+    --line-height-xxs: 12px;
     --font-size-xs: 12px;
-    --f-l-h-bac: 16px;
+    --line-height-xs: 16px;
     --font-size-sm: 14px;
-    --j-p-z-kco: 18px;
+    --line-height-sm: 18px;
     --font-size-sm: 14px;
-    --gvarj-f: 20px;
+    --line-height-md: 20px;
     --font-size: 16px;
-    ---s-l-myu: 20px;
+    --line-height-md: 20px;
     --font-size: 16px;
-    --cb-pewj: 24px;
+    --line-height-xl: 24px;
     --font-size-md: 18px;
-    --f-xgviq: 24px;
+    --line-height-xl: 24px;
     --font-size-md: 18px;
-    --j-n-c-d-l-h: 28px;
+    --line-height-2xl: 28px;
     --e-y-j-d-v-j: 400;
     --jx-zk-pv: 600;
     --h-oqhch: 800;
