--- a/src/css/components/cards/card-basic.css
+++ b/src/css/components/cards/card-basic.css
@@ -2,7 +2,7 @@
 .card-basic__title[class][class] {
   color: var(--f-k-smk-x);
   font-size: var(--font-size-md);
-  line-height: var(--d-ar-t-o-n);
+  line-height: var(--line-height-lg);
   font-weight: var(--jx-zk-pv);
   display: block;
 }
